--- a/src/App.css
+++ b/src/App.css
@@ -192,6 +192,7 @@ input{
   font-size: calc(10px + 2vmin);
   padding-left: .5rem;
   border: none;
+  border-radius: 0;
   border-bottom: solid white 2px;
   background: none;
 }
